working on Stripe connection
