# backend/api/openapi.yaml
@@ -174,6 +174,28 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /checkout:
+    get:
+      security:
+        - bearerAuth: []
+      description: Upload Item
+      responses:
+        200:
+          description: Item Response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  url:
+                    type: string
+        default:
+          description: Unexpected Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
 
 
 components:
